Fix cards on tablet

--- a/front-end/src/app/base/style/_card.scss
+++ b/front-end/src/app/base/style/_card.scss
@@ -6,9 +6,8 @@
   padding: 10px;
   border-radius: 8px;
   background-color: #fff;
-  min-height: 150px;
-  min-width: 300px;
-  max-width: 400px;
+  height: 150px;
+  width: 300px;
   cursor: pointer;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   transition: all 0.2s ease-in;
@@ -18,6 +17,32 @@
     .card__header {
       &-title {
         font-size: 20px;
+      }
+    }
+
+    @media (max-width: 1024px) {
+      margin: 5px;
+      padding: 5px;
+      width: 220px;
+      height: 130px;
+
+      .custom-card {
+        &__body {
+          &-bottom {
+            width: 210px;
+            bottom: 4px;
+            left: 5px;
+
+            &-quantity {
+              margin-right: -1px;
+            }
+
+            &-remove-icon {
+              opacity: 1;
+              pointer-events: auto;
+            }
+          }
+        }
       }
     }
   }
@@ -61,6 +86,7 @@
 
   &__body {
     display: flex;
+    flex-direction: column;
 
     &-description {
       color: $tertiary-color;
@@ -72,28 +98,37 @@
       font-weight: 300;
     }
 
-    &-quantity {
-      color: $secondary-color;
-      padding: 10px;
-      font-size: 50px;
-      position: absolute;
-      right: 0;
-      bottom: 0;
-      line-height: 40px;
-
-      &-error {
-        color: red;
-      }
-    }
-
     &-stock {
       color: $tertiary-color;
-      padding: 10px 15px;
+      padding: 6px;
       font-size: 14px;
-      position: absolute;
-      left: 0;
-      bottom: 0;
       line-height: 14px;
+    }
+
+    &-bottom {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: absolute;
+      bottom: 7px;
+      left: 10px;
+      width: 280px;
+
+      &-quantity {
+        color: $secondary-color;
+        font-size: 50px;
+        line-height: 40px;
+        margin-right: -3px;
+
+        &-error {
+          color: red;
+        }
+      }
+
+      &-remove-icon {
+        opacity: 0;
+        pointer-events: none;
+      }
     }
 
     &-price {
